# biosphere

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
NASA2/: asgi.py  database.md  settings.py  urls.py  wsgi.py
biosphere/: admin.py  apps.py  exeptions.py  models.py  serializers.py  urls.py  views.py
biosphere/migrations/: 0001_initial.py  0002_alter_user_id.py  0002_initial.py  0003_graph_alter_user_id.py  0003_user_groups_user_is_superuser_user_user_permissions.py  0004_remove_author_papers.py  0005_alter_author_id.py  0006_uploadedpapers.py  0007_uploadedpapers_paper_state.py  0008_user_google_id_user_is_verified_alter_user_name.py  0009_remove_user_is_verified.py  0010_chatmessage_chatsession_delete_author_and_more.py
graph_database/: apps.py  models.py  urls.py  views.py
search_database/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
search_database/ai/: FALLBACK.md  graph_generator.py  prompt_templates.py  query_rewriter.py  response_generator.py  schemas.py  semantic_router.py
search_database/extraction/: extracters.py  features.md  fetchers.py  schemas.py
search_database/ingestion/: authors.py  citations.py  embeddings.py  images.py  services.py
search_database/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_alter_citations_id_alter_imagenodes_id_and_more.py  0002_initial.py  0003_alter_abstractinfo_id.py  0003_rename_title_citations_raw_text_and_more.py  0004_remove_researchpaper_description_citations_paper.py  0006_imagenodes_pmcid.py  (+6 more)
(+15 files in other folders)
